[package]
name = "venum_tds"
version = "0.1.0"
description = "Tabular Data Structures (tds), based on venum's `Value` Enum."
authors = ["Joerg Sischka <sischcode@gmx.net>"]
readme = "README.md"
keywords = ["venum", "table", "tabular", "row", "cell", "csv", "data structures", "structs", "parsing", "dynamic typing"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
venum = { path = "../venum", version = "0.1.0" }
thiserror = "1.0"
strum_macros = "0.24"

# Implicit feature: "dep:regex"
regex = { version = "1.5", optional = true}

# Implicit features: "dep:serde" and "dep:serde_json".
serde = { version = "1.0", features = ["derive"], optional = true}
serde_json = { version = "1.0", optional = true }

[features]
default = ["transform", "jsonconf"]

transform = ["dep:regex"]

# We have all our json conf stuff (i.e. configuration via json) in a feature "jsonconf"
# This in turn needs serde and serde_json, as well as the serde feature in venum
jsonconf = ["dep:serde", "dep:serde_json", "venum/serde"]