[package]
name = "venum_tds"
version = "0.1.1"
description = "Tabular Data Structures (tds), based on venum's `Value` Enum."
authors = ["Jörg Sischka <sischcode@gmx.net>"]
readme = "README.md"
repository = "https://github.com/sischcode/venum_tds"
keywords = ["venum", "table", "tabular", "row", "cell", "csv", "data structures", "structs", "parsing", "dynamic typing"]
license = "Apache-2.0"
# license-file = "LICENSE"
edition = "2021"
# rust-version = "1.62"
include = ["/src", "README.md", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
venum = { path = "../venum", version = "0.1.1" }
thiserror = "1.0"
strum_macros = "0.24"

# Implicit features "dep:<crate-name>"
regex = { version = "1.5", optional = true}
chrono = {version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true}
serde_json = { version = "1.0", optional = true }

[features]
default = ["jsonconf"]

# 1) we need chrono for adding Date/Time stuff during runtime
# 2) we need regexp for, well, splitting via regex
transform = ["dep:regex", "dep:chrono"]

# We have all our json conf stuff (i.e. configuration via json) in a feature "jsonconf"
# This in turn needs serde and serde_json, as well as the serde feature in venum. Also,
# since this doesn't make any sense without "transform" to be enabled as well, we enable
# it here. (We essentially json-configure the transformation, that's why we need it...)
jsonconf = ["transform", "dep:serde", "dep:serde_json", "venum/serde"]